Prevent horizontal scroll on site

--- a/isaac-macdonald/src/App.css
+++ b/isaac-macdonald/src/App.css
@@ -41,6 +41,11 @@
   text-align: center;
 }
 
+body, html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   background-color: #212b42;
 }
